--- a/MVC/views/user/home.ejs
+++ b/MVC/views/user/home.ejs
@@ -75,8 +75,11 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                     <a class="nav-link" href="#">Features</a>
                     <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="/logout">Logout</a>
                 </div>
             </div>
+            
+            
         </div>
     </nav>
 
